[package]
edition = "2021"
name = "cql-stress"
version = "0.1.0"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cql-stress-cassandra-stress"
path = "src/bin/cql-stress-cassandra-stress/main.rs"

[[bin]]
name = "cql-stress-scylla-bench"
path = "src/bin/cql-stress-scylla-bench/main.rs"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.dist]
inherits = "release"
opt-level = 3
overflow-checks = false
debug = false
strip = true
debug-assertions = false

[profile.dev-opt]
inherits = "dev"
opt-level = 2

[dependencies]
anyhow = "1.0.52"
async-trait = "0.1.52"
base64 = "0.13.0"
chrono = "0.4.9"
futures = "0.3.19"
hdrhistogram = "7.5.0"
lazy_static = "1.4.0"
java_random = "0.1.7"
openssl = "0.10.32"
parking_lot = "0.12.0"
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
regex = "1.9.1"
scylla = { version = "1.0.0", features = ["openssl-010"]}
sha2 = "0.10"
strum = "0.25.0"
strum_macros = "0.27.1"
thread_local = "1.1.4"
tokio = { version = "1.15.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "fs",
    "signal",
] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rust-strictmath = "0.1.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = { version = "0.8", optional = true }
uuid = { version = "1.0", optional = true }

[build-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
chrono = "0.4.9"
cargo-lock = "10.1.0"
git2 = "0.19"

[features]
default = ["user-profile"]
user-profile = ["dep:serde", "dep:serde_yaml", "dep:uuid"]

[dev-dependencies]
ntest = "0.9"
num-bigint = "0.4"
bigdecimal = "0.4"
scylla = { version = "1.0.0", features = [
    "openssl-010",
    "num-bigint-04",
    "bigdecimal-04",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(fetch_extended_version_info)',
] }
