[package]
edition = "2021"
name = "cql-stress"
version = "0.2.4"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cql-stress-cassandra-stress"
path = "src/bin/cql-stress-cassandra-stress/main.rs"

[[bin]]
name = "cql-stress-scylla-bench"
path = "src/bin/cql-stress-scylla-bench/main.rs"

[profile.release]
codegen-units = 1
panic = "abort"

[profile.dist]
inherits = "release"
lto = true
opt-level = 3
overflow-checks = false
debug = false
strip = true
debug-assertions = false

[profile.dev-opt]
inherits = "dev"
opt-level = 2

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22"
chrono = "0.4.44"
futures = "0.3.32"
hdrhistogram = "7.5.4"
lazy_static = "1.5.0"
java_random = "0.1.7"
openssl = "0.10.80"
parking_lot = "0.12.5"
rand = "0.10"
rand_distr = "0.6"
rand_pcg = "0.10"
regex = "1.12.3"
scylla = { version = "1.6.0", features = ["openssl-010"] }
sha2 = "0.11"
strum = "0.28.0"
strum_macros = "0.28.0"
thread_local = "1.1.9"
# NOTE: tokio pinning removed - regression in https://github.com/tokio-rs/tokio/issues/7744 has been resolved
tokio = { version = "1.52.3", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "fs",
    "signal",
] }
tokio-timerfd = { version = "0.2.0", optional = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rust-strictmath = "0.1.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = { version = "0.9", optional = true }
uuid = { version = "1.23", optional = true }

[build-dependencies]
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde_json = "1.0"
chrono = "0.4.44"
cargo-lock = "11.0.1"
git2 = "0.21"

[features]
default = ["user-profile"]
user-profile = ["dep:serde", "dep:serde_yaml", "dep:uuid"]
timerfd = ["dep:tokio-timerfd"]

[dev-dependencies]
ntest = "0.9"
num-bigint = "0.4"
bigdecimal = "0.4"
scylla = { version = "1.6.0", features = [
    "openssl-010",
    "num-bigint-04",
    "bigdecimal-04",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(fetch_extended_version_info)',
] }
